Improve documentation endpoint
